--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.7.2",
+    "bcrypt": "^3.0.6",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.6.2-bdaf070.0",
     "mongoose": "^5.6.7"
   }
